Enhance TransferController to utilize AuthenticationHelper for user portfolio retrieval; refactor Operation class to support JOINED inheritance strategy